--- a/index.html
+++ b/index.html
@@ -1,105 +1,178 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
 
-<title>Jun_portfolio</title>
-<link href="images/16pxicon.png" rel="shortcut icon" type="image/x-icon">
-<link href="css/common.css" rel="stylesheet" type="text/css">
-<link href="css/style.css" rel="stylesheet" type="text/css">
 
-<script src="./js/jquery-3.1.1.min.js" type="text/javascript"></script>
-<script src="http://code.jquery.com/jquery-migrate-3.0.0.js"></script>
-<script src="js/main.js"></script>
+    <title>Jun_portfolio 2</title>
+    <link href="images/16pxicon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="css/common.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/wowanimate.css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+
+    <script src="./js/jquery-3.1.1.min.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/jquery-migrate-3.0.0.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/wow.js"></script>
+    <script>
+        new WOW().init();
+    </script>
+    <script src="js/main.js"></script>
 
 </head>
 
 <body>
-<div id="wrap">
-  <header id="header">
-    <h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="로고"></a></h1>
-    <nav id="nav">
-      <ul>
-        <li><a href="#">menu1</a></li>
-        <li><a href="#">menu2</a></li>
-        <li><a href="#">menu2</a></li>
-        <li><a href="#">menu2</a></li>
-      </ul>
-    </nav>
-  </header>
-  <hr>
-  <section id="sec1">
-    <div class="typing-txt"> 
-      <ul>
-        <li>#WELCOM</li>
-        <li>.HEYUN-JUN</l>
-        <li>.PORTFOLIO</li>
-      </ul> 
-    </div> 
-    <div class="typing">
-       <ul>
-         <li></li>
-         <li></li>
-         <li></li>
-      </ul>
+    <div id="wrap">
+        <header id="header">
+            <div id="headerbox">
+                <h1 id="logo">
+                    <a href="index.html"><img src="images/logo.png" alt="로고"></a>
+                </h1>
+                <ul class="gnb">
+                    <li class="active"><a href="#sec1">TOP</a></li>
+                    <li><a href="#sec2">WEB SITE 1</a></li>
+                    <li><a href="#sec3">WEB SITE 2</a></li>
+                    <li><a href="#sec4">WEB SITE 3</a></li>
+                    <li><a href="#sec5">DESIGN</a></li>
+                </ul>
+            </div>
+        </header>
+        <div id="sec">
+            <div id="sec1">
+                <div class="typing-txt">
+                    <ul>
+                        <li>#WELCOM</li>
+                        <li>.HEYUN-JUN</l>
+                            <li>.PORTFOLIO</li>
+                    </ul>
+                </div>
+                <div class="typing">
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="stage">
+                    <div class="cube">
+                        <div class="top">TOP</div>
+                        <div class="bottom">BOTTOM</div>
+                        <div class="right">RIGHT</div>
+                        <div class="left">LEFT</div>
+                        <div class="back">BACK</div>
+                        <div class="front">FRONT</div>
+                    </div>
+                </div>
+                <hr>
+                <div class="mimg">
+                    <img src="images/scroll.gif" alt="스크롤 이미지">
+                </div>
+            </div>
+            <!--#sec1-->
+
+            <div id="sec2">
+                <h2 class="wow animate__fadeInTopLeft" data-wow-delay="0.3s">
+                    #WEB SITE PROJECT1
+                </h2>
+                <hr>
+                <ul class="wow fadeInDown" data-wow-delay="0.6s">
+                    <li>스타 피부과</li>
+                    <li>홈페이지 리뉴얼</li>
+                    <li>UI/UX 디자인 및 웹 퍼블리싱</li>
+                    <li>활발한 느낌의 노랑 포인트 컬러</li>
+                    <li><a href="https://ghdtl123.github.io/proj1/" target="_blank">WEB SITE GO</a></li>
+                </ul>
+                <div class="imgbox wow fadeIn" data-wow-delay="0.9s">
+
+                </div>
+            </div>
+            <!--#sec2-->
+
+            <div id="sec3">
+                <h2 class="wow animate__fadeInTopLeft" data-wow-delay="0.3s">
+                    #WEB SITE PROJECT2
+                </h2>
+                <hr>
+                <ul class="wow fadeInDown" data-wow-delay="0.6s">
+                    <li>코카-콜라</li>
+                    <li>홈페이지 리뉴얼</li>
+                    <li>아이덴티티 제작,UI/UX 디자인 및 웹 퍼블리싱</li>
+                    <li>제품의 특정 포인트 컬러</li>
+                    <li><a href="https://ghdtl123.github.io/proj2-1/" target="_blank">WEB SITE GO</a></li>
+                    <li><a href="pdf/coca_Identity.pdf" target="_blank">IDENTITY</a></li>
+                </ul>
+                <div class="imgbox wow fadeIn" data-wow-delay="0.9s">
+
+                </div>
+            </div>
+            <!--#sec3-->
+
+            <div id="sec4">
+                <h2 class="wow animate__fadeInTopLeft" data-wow-delay="0.3s">
+                    #WEB SITE PROJECT3
+                </h2>
+                <hr>
+                <ul class="wow fadeInDown" data-wow-delay="0.6s">
+                    <li>리스테린</li>
+                    <li>홈페이지 리뉴얼 및 서비스 디자인</li>
+                    <li>UI/UX 디자인 및 웹 퍼블리싱</li>
+                    <li>각 제품 종류에 맞는 포인트 컬러</li>
+                    <li><a href="https://ghdtl123.github.io/proj3/" target="_blank">WEB SITE GO</a></li>
+                </ul>
+                <div class="imgbox wow fadeIn" data-wow-delay="0.9s">
+
+                </div>
+            </div>
+            <!--#sec4-->
+
+            <div id="sec5">
+                <ul>
+                    <li class="wow animate__fadeInTopLeft"><a href="#">#ICON</a></li>
+                    <li class="wow animate__fadeIn" data-wow-delay="0.6s"><a href="#">#BANNER</a></li>
+                    <li class="wow animate__fadeInBottomLeft" data-wow-delay="0.3s"><a href="#">#OTHERS</a></li>
+                </ul>
+                <div class="imgbox wow fadeIn" data-wow-delay="0.9s">
+
+                </div>
+                <hr>
+                <p class="wow fadeInDown" data-wow-delay="0.9s">Thank you for viewing my portfolio so far. Please us at the number below.</p>
+                <p class="txtk wow fadeInLeft" data-wow-delay="1.2s">지금까지 저의 포트폴리오를 봐주셔서 감사합니다. 아래의 연락처로 연락주세요.</p>
+            </div>
+            <!--#sec5-->
+
+        </div>
+        <!--#sec-->
+        <hr>
+        <footer id="footer">
+            <h2>
+                #ABOUT ME
+            </h2>
+            <hr>
+            <ul>
+                <li>홍현준</li>
+                <li>010-5368-0707</li>
+                <li>ghdtl123@daum.net</li>
+                <li><a href="pdf/Hong heyun-jun.pdf" target="_blank">이력서 보러가기</a></li>
+            </ul>
+            <div class="imgbox">
+                <a href="pdf/Hong heyun-jun.pdf" target="_blank"><img src="images/heyun-jun.png" alt="이력서 이미지"></a>
+            </div>
+            <hr>
+            <div class="arrow-down">
+                <a href="index.html">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </a>
+                <p>TOP</p>
+            </div>
+        </footer>
     </div>
-    <div class="stage">
-      <div class="cube">
-        <div class="top">TOP</div>
-        <div class="bottom">BOTTOM</div>
-        <div class="right">RIGHT</div>
-        <div class="left">LEFT</div>
-        <div class="back">BACK</div>
-        <div class="front">FRONT</div>
-      </div>
-    </div>
-    <hr>
-    <div class="mimg">
-       <img src="images/Untitled-2.png" alt="스크롤 이미지">
-    </div>
-  </section>
-  <section id="sec2">
-    <h2 class="sec2txt1">
-      $(document)<br>
-      .ready(function(){<br>
-      My Web Site}
-    </h2>
-    <h2 class="sec2txt2">
-      #STAR
-    </h2>
-    <ul>
-      <li>프로젝트 1</li>
-      <li>타이틀</li>
-      <li>컨셉</li>
-      <li><a class="stargo" href="#">홈페이지 보러가기</a></li>
-    </ul>
-    <h2 class="sec2txt3">
-      #COCA-COLA
-    </h2>
-    <ul>
-      <li>프로젝트 2</li>
-      <li>타이틀</li>
-      <li>컨셉</li>
-      <li><a class="cocago" href="#">홈페이지 보러가기</a></li>
-    </ul>
-    <h2 class="sec2txt4">
-      #LISTERINE
-    </h2>
-    <ul>
-      <li>프로젝트 3</li>
-      <li>타이틀</li>
-      <li>컨셉</li>
-      <li><a class="lisgo" href="#">홈페이지 보러가기</a></li>
-    </ul>
-  </section>
-  <section id="sec3">
-    
-  </section>
-  <section></section>
-  <footer id="footer"></footer>
-</div>
+    <!--#wrap-->
 </body>
 
 </html>
